test/Fail/OptionInteractionWithBackend.agda
-- Andreas, 2025-08-07
-- Trigger error when --interaction is combined with backend,
-- e.g. --html.

-- File left empty intentionally.
